@@ -1,8 +1,18 @@
-MD5 709eca72c6ba60a86fe70f69106694e6 pcb-20040903.ebuild 851
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 2f5577dd44ddf5e9a6e47c052a1b7eff ChangeLog 2164
 MD5 8c623e53daafa025137077c6b65815bd metadata.xml 156
-MD5 729ee76f8ef4ff88ba1c6e1a55cb577f ChangeLog 2033
 MD5 513e31d15a24bb4c6f80044bb0c0f6a3 pcb-20040215.ebuild 843
-MD5 b172ae45b328c5a87f006f9f863e2b85 pcb-20040530.ebuild 845
+MD5 c5df356ac2124cf3935bca245e058d8b pcb-20040530.ebuild 854
+MD5 be06630592eb518288147e70db67b947 pcb-20040903.ebuild 860
 MD5 ac3578eb4744e148817cf6527f65305f files/digest-pcb-20040215 65
 MD5 358063d87a3cff8d721590089886cf30 files/digest-pcb-20040530 65
 MD5 52b5eab810332cba57a026c004cb654c files/digest-pcb-20040903 65
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.2.6 (GNU/Linux)
+
+iD8DBQFCI5KRKRy60XGEcJIRAv9fAJ96VeMWfXmg80M0gYXwwZbwX00uEQCfUE6p
+WoXZraDPERpO7dfwT2PQx7E=
+=c3BM
+-----END PGP SIGNATURE-----
