@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/pcb/pcb-20040530.ebuild,v 1.2 2005/02/17 23:23:41 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/pcb/pcb-20040530.ebuild,v 1.3 2005/02/28 21:52:06 gustavoz Exp $
 
 DESCRIPTION="tool for the layout of printed circuit boards"
 HOMEPAGE="http://pcb.sourceforge.net/"
@@ -8,7 +8,7 @@ SRC_URI="mirror://sourceforge/pcb/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~amd64"
+KEYWORDS="x86 ~amd64 ~sparc"
 IUSE="Xaw3d"
 
 RDEPEND="virtual/x11"
